5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1590_2895.log
== TEST (2019-03-20 15:48:25) 
-- CODE:
var = loat(input("Qual o valor unitario do jogo?"))
var1 = float(input("Qual o valor unitario do jogo?"))
var2 = float(input("Qual o valor unitario do jogo?"))
total = (var + var1 + var2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = loat(input())
NameError: name 'loat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:48:27) 
-- CODE:
var = loat(input("Qual o valor unitario do jogo?"))
var1 = float(input("Qual o valor unitario do jogo?"))
var2 = float(input("Qual o valor unitario do jogo?"))
total = (var + var1 + var2)
print(total)
-- EXECUTION TIME:
0.148201
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 1, in <module>
    var = loat(input())
NameError: name 'loat' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:48:37) 
-- CODE:
var = float(input("Qual o valor unitario do jogo?"))
var1 = float(input("Qual o valor unitario do jogo?"))
var2 = float(input("Qual o valor unitario do jogo?"))
total = (var + var1 + var2)
print(total)
-- EXECUTION TIME:
0.151413
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:48:37) 
-- CODE:
var = float(input("Qual o valor unitario do jogo?"))
var1 = float(input("Qual o valor unitario do jogo?"))
var2 = float(input("Qual o valor unitario do jogo?"))
total = (var + var1 + var2)
print(total)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:48:40) 
-- CODE:
var = float(input("Qual o valor unitario do jogo?"))
var1 = float(input("Qual o valor unitario do jogo?"))
var2 = float(input("Qual o valor unitario do jogo?"))
total = (var + var1 + var2)
print(total)
-- EXECUTION TIME:
0.139819
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:48:42) 
-- CODE:
var = float(input("Qual o valor unitario do jogo?"))
var1 = float(input("Qual o valor unitario do jogo?"))
var2 = float(input("Qual o valor unitario do jogo?"))
total = (var + var1 + var2)
print(total)
-- EXECUTION TIME:
0.162774
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:48:43) 
-- CODE:
var = float(input("Qual o valor unitario do jogo?"))
var1 = float(input("Qual o valor unitario do jogo?"))
var2 = float(input("Qual o valor unitario do jogo?"))
total = (var + var1 + var2)
print(total)
-- EXECUTION TIME:
0.169625
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:49:22) 
-- CODE:
var = float(input("Qual a quantidade de jogos?"))
var1 = float(input("Qual o valor unitario do jogo?"))
var2 = float(input("Qual o valor do frete?"))
total = (var + var1 + var2)
print(total)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:49:24) 
-- CODE:
var = float(input("Qual a quantidade de jogos?"))
var1 = float(input("Qual o valor unitario do jogo?"))
var2 = float(input("Qual o valor do frete?"))
total = (var + var1 + var2)
print(total)
-- EXECUTION TIME:
0.137705
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:49:25) 
-- CODE:
var = float(input("Qual a quantidade de jogos?"))
var1 = float(input("Qual o valor unitario do jogo?"))
var2 = float(input("Qual o valor do frete?"))
total = (var + var1 + var2)
print(total)
-- EXECUTION TIME:
0.135153
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:49:56) 
-- CODE:
var1 = float(input("Qual a quantidade de jogos?"))
var2 = float(input("Qual o valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = (var + var1 + var2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = (var + var1 + var2)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:50:26) 
-- CODE:
var1 = float(input("Qual a quantidade de jogos?"))
var2 = float(input("Qual o valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = (var1 + var2 + var3)
print(total)
-- EXECUTION TIME:
0.13492
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:50:29) 
-- CODE:
var1 = float(input("Qual a quantidade de jogos?"))
var2 = float(input("Qual o valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = (var1 + var2 + var3)
print(total)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:50:43) 
-- CODE:
var1 = float(input("Qual a quantidade de jogos?"))
var2 = float(input("Qual o valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = (var1 * var2 + var3)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:50:45) 
-- CODE:
var1 = float(input("Qual a quantidade de jogos?"))
var2 = float(input("Qual o valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = (var1 * var2 + var3)
print(total)
-- EXECUTION TIME:
0.168353
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:01:12) 
-- CODE:
var1 = float(input("Qual a quantidade de jogos?"))
var2 = float(input("Qual o valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = (var1 * var2 + var3)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:50:56) 
-- CODE:
var1 = float(input("Qual a quantidade de jogos?"))
var2 = float(input("Qual o valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = (var1 * var2 + var3)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:50:57) 
-- CODE:
var1 = float(input("Qual a quantidade de jogos?"))
var2 = float(input("Qual o valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = (var1 * var2 + var3)
print(total)
-- EXECUTION TIME:
0.114908
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:50:58) 
-- CODE:
var1 = float(input("Qual a quantidade de jogos?"))
var2 = float(input("Qual o valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = (var1 * var2 + var3)
print(total)
-- EXECUTION TIME:
0.106255
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 01:07:38) 
-- CODE:
var1 = float(input("Qual a quantidade de jogos?"))
var2 = float(input("Qual o valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = (var1 * var2 + var3)
print(total)
-- EXECUTION TIME:
0.192249
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
